--- a/src/components/ThemeWrapper/style.css
+++ b/src/components/ThemeWrapper/style.css
@@ -10,29 +10,30 @@ body {
     margin: unset;
 
     /* Common color variables across all themes */
-    --success-light-color: rgb(78, 201, 139);
-    --success-color: rgb(30, 169, 100);
-    --success-dark-color: rgb(2, 114, 58);
 
-    --success-color-rgb: 30, 169, 100;
+    --success-color-hue: 150;
 
-    --failure-light-color: rgb(252, 98, 98);
-    --failure-color: rgb(245, 58, 58);
-    --failure-dark-color: rgb(189, 7, 7);
+    --success-light-color: hsl(var(--success-color-hue), 53%, 55%);
+    --success-color: hsl(var(--success-color-hue), 70%, 39%);
+    --success-dark-color: hsl(var(--success-color-hue), 97%, 23%);
 
-    --failure-color-rgb: 245, 63, 63;
+    --failure-color-hue: 0;
 
-    --warning-light-color: rgb(245, 215, 116);
-    --warning-color: rgb(233, 195, 72);
-    --warning-dark-color: rgb(212, 170, 31);
+    --failure-light-color: hsl(var(--failure-color-hue), 96%, 69%);
+    --failure-color: hsl(var(--failure-color-hue), 90%, 59%);
+    --failure-dark-color: hsl(var(--failure-color-hue), 93%, 38%);
 
-    --warning-color-rgb: 235, 198, 77;
+    --warning-color-hue: 46;
 
-    --information-light-color: rgb(135, 137, 255);
-    --information-color: rgb(96, 98, 247);
-    --information-dark-color: rgb(63, 66, 221);
+    --warning-light-color: hsl(var(--warning-color-hue), 87%, 71%);
+    --warning-color: hsl(var(--warning-color-hue), 79%, 60%);
+    --warning-dark-color: hsl(var(--warning-color-hue), 74%, 48%);
 
-    --information-color-rgb: 105, 108, 255;
+    --information-color-hue: 239;
+
+    --information-light-color: hsl(var(--information-color-hue), 100%, 76%);
+    --information-color: hsl(var(--information-color-hue), 90%, 67%);
+    --information-dark-color: hsl(var(--information-color-hue), 70%, 56%);
 
     /* all colors of grey across all themes */
     --grey-color-000: hsl(0, 0%, 100%);
